--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,12 @@ web3 = "^6.15.1"
 pydantic = "^2.6.1"
 eth-typing = "^3.0.0"
 pydantic-settings = "^2.1.0"
+isort = "^5.13.2"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.3.2"
+pytest = "*"
+mypy = "^1.9.0"
+black = "^23.12.1"
 
 [build-system]
 requires = ["poetry-core"]
