Added missing packages

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pydantic = "^2.6.1"
 eth-typing = "^3.0.0"
 pydantic-settings = "^2.1.0"
 isort = "^5.13.2"
+autoflake = "^2.2.1"
+types-requests = "^2.31.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "*"
