--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,6 @@
 [mypy]
 python_version = 3.10
-files = cowswap_python_client/, tests/
+files = cowswap_client/, tests/
 plugins = pydantic.mypy
 warn_redundant_casts = True
 warn_unused_ignores = True
@@ -19,9 +19,7 @@ ignore_missing_imports = True
 # We don't want to ignore all missing imports as we want to catch those in our own code
 # But for certain libraries they don't have a stub file, so we only enforce import checking for our own libraries.
 # Another alternative would be to list out every single dependency that does not have a stub.
-[mypy-prediction_market_agent.*]
-ignore_missing_imports = False
-[mypy-scripts.*]
+[mypy-cowswap_client.*]
 ignore_missing_imports = False
 [mypy-tests.*]
 ignore_missing_imports = False
